# local-subtitle-android

./: .gitignore  BUILD.md  HANDOVER.md  checklist.md  settings.gradle.kts  setup.ps1  setup.sh  spec.md  stitch_prompt.md  tasks.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ffmpeg_bridge.cpp  whisper_bridge.cpp
app/src/main/java/com/lemonsubtitle/: FFmpegBridge.kt  MainActivity.kt  WhisperBridge.kt
app/src/main/java/com/lemonsubtitle/data/: ModelDownloadManager.kt  ModelManager.kt  SettingsDataStore.kt
app/src/main/java/com/lemonsubtitle/model/: Subtitle.kt  SubtitleParser.kt
app/src/main/java/com/lemonsubtitle/service/: ProcessingManager.kt  ProcessingService.kt  TranslationHelper.kt
app/src/main/java/com/lemonsubtitle/ui/components/: VideoPlayer.kt  WaveformView.kt
app/src/main/java/com/lemonsubtitle/ui/navigation/: AppNavigation.kt  Screen.kt
app/src/main/java/com/lemonsubtitle/ui/screens/: ModelManagerScreen.kt  SettingsScreen.kt  StudioScreen.kt  SubtitleEditScreen.kt
app/src/main/java/com/lemonsubtitle/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-zh/: strings.xml
gradle/: libs.versions.toml
stitch/_1/: code.html
stitch/_2/: code.html
stitch/_3/: code.html
stitch/_4/: code.html
stitch/lemonsubtitle_precision/: DESIGN.md
